apps/overlays/dev/company-website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: company-website
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - guerreroplumbingco.com
      secretName: company-website-tls
  rules:
    - host: guerreroplumbingco.com
      http:
        paths:
          - backend:
              service:
                name: company-website
                port:
                  number: 80
            path: /
            pathType: Prefix
